Improved GUI in Jupyter notebook

--- a/tests/LazyQML.ipynb
+++ b/tests/LazyQML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,14 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "import sys\n",
+    "# caution: path[0] is reserved for script path (or '' in REPL)\n",
+    "sys.path.insert(1, '../lazyqml/')\n",
+    "\n",
+    "from Global.globalEnums import *\n",
+    "from lazyqml import QuantumClassifier\n",
+    "import itertools\n",
+    "\n",
     "# Add custom CSS for better aesthetics\n",
     "display(HTML(\"\"\"\n",
     "<style>\n",
@@ -65,18 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d443cdc2e5848d4a35993abce43e9f1",
+       "model_id": "cf437577cc3c423f82a59f4046c3d53f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HTML(value='<h3>Quantum Classifier Configuration</h3>'), IntSlider(value=100, description='Epoc…"
+       "VBox(children=(HTML(value='<h3>Quantum Classifier Configuration</h3>'), VBox(children=(Label(value='General mo…"
       ]
      },
      "metadata": {},
@@ -86,53 +94,191 @@
    "source": [
     "\n",
     "# Widgets for user input with enhanced styles and multi-selection\n",
-    "epochs_widget = widgets.IntSlider(\n",
-    "    min=1, max=1000, step=1, value=100, description=\"Epochs:\",\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "epochs_widget = widgets.IntText(\n",
+    "    min=1, \n",
+    "    max=1000, \n",
+    "    step=1, \n",
+    "    value=10, \n",
+    "    description=\"Epochs:\",\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='500px'))\n",
     "\n",
-    "layers_widget = widgets.IntSlider(\n",
-    "    min=1, max=100, step=1, value=5, description=\"Layers:\",\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "layers_widget = widgets.IntText(\n",
+    "    value=7.5,\n",
+    "    min=0,\n",
+    "    max=100,\n",
+    "    step=1,\n",
+    "    description='Layers:',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'},\n",
+    "    layout=widgets.Layout(width='500px')\n",
+    ")\n",
     "\n",
-    "nqubits_widget = widgets.IntSlider(\n",
-    "    min=1, max=20, step=1, value=8, description=\"Qubits:\",\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "nqubits_widget = widgets.IntText(\n",
+    "    min=1,\n",
+    "    max=30, \n",
+    "    step=1, \n",
+    "    value=4, \n",
+    "    description=\"Qubits:\",\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='500px')\n",
+    ")\n",
     "\n",
     "randomstate_widget = widgets.IntText(\n",
-    "    value=1234, description=\"Random State:\",\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='300px'))\n",
+    "    value=1234, \n",
+    "    description=\"Seed:\",\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
     "\n",
-    "# Classifier multi-selection using a Dropdown with multiple selection enabled\n",
-    "classifiers_options = ['qsvm', 'qnn', 'qnnbag']\n",
-    "classifiers_widget = widgets.SelectMultiple(\n",
-    "    options=classifiers_options, value=['qsvm'], description='Classifiers:',\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "runs_widget = widgets.IntText(\n",
+    "    min=1,\n",
+    "    max=10, \n",
+    "    step=1, \n",
+    "    value=1, \n",
+    "    description=\"Runs:\",\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "# # Classifier multi-selection using a Dropdown with multiple selection enabled\n",
+    "# classifiers_options = ['qsvm', 'qnn', 'qnnbag']\n",
+    "# classifiers_widget = widgets.SelectMultiple(\n",
+    "#     options=classifiers_options, value=['qsvm'], description='Classifiers:',\n",
+    "#     style={'description_width': '150px'}, layout=widgets.Layout(width='500px')\n",
+    "# )\n",
+    "\n",
+    "# Models\n",
+    "qsvm_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='QSVM',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "qnn_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='QNN',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "qnn_bag_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='QNN Bagging',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "# Ansatzs\n",
+    "hp_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='HCzRx',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "tt_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Tree Tensor',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "two_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Two Local',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "hwe_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Hardware Efficient',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "# Embeddings\n",
+    "rx_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Rotation X',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "ry_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Rotation Y',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "rz_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Rotation Z',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "zz_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='ZZ',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "amp_checkbox = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Amplitude',\n",
+    "    disabled=False,\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "\n",
     "\n",
     "# Ansatz multi-selection with Dropdown widget for intuitive multiple selection\n",
-    "ansatzs_options = ['HPzRx', 'tree_tensor', 'two_local', 'hardware_efficient']\n",
-    "ansatzs_widget = widgets.SelectMultiple(\n",
-    "    options=ansatzs_options, value=['HPzRx'], description='Ansatzs:',\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "# ansatzs_options = ['HPzRx', 'tree_tensor', 'two_local', 'hardware_efficient']\n",
+    "# ansatzs_widget = widgets.SelectMultiple(\n",
+    "#     options=ansatzs_options, value=['HPzRx'], description='Ansatzs:',\n",
+    "#     style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
     "\n",
-    "# Embeddings multi-selection using Dropdown\n",
-    "embeddings_options = ['amplitude_embedding', 'ZZ_embedding', 'rx_embedding', 'rz_embedding', 'ry_embedding']\n",
-    "embeddings_widget = widgets.SelectMultiple(\n",
-    "    options=embeddings_options, value=['amplitude_embedding'], description='Embeddings:',\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "# # Embeddings multi-selection using Dropdown\n",
+    "# embeddings_options = ['amplitude_embedding', 'ZZ_embedding', 'rx_embedding', 'rz_embedding', 'ry_embedding']\n",
+    "# embeddings_widget = widgets.SelectMultiple(\n",
+    "#     options=embeddings_options, value=['amplitude_embedding'], description='Embeddings:',\n",
+    "#     style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
     "\n",
     "# Verbose switch\n",
-    "verbose_widget = widgets.ToggleButton(\n",
-    "    value=False, description=\"Verbose\", icon='check',\n",
-    "    button_style='info', style={'description_width': '150px'}, layout=widgets.Layout(width='200px'))\n",
+    "verbose_widget = widgets.Checkbox(\n",
+    "    value=False, description=\"Verbose\",\n",
+    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
     "\n",
     "# Number of samples as a percentage (from 0.0 to 1.0)\n",
     "nsamples_widget = widgets.FloatSlider(\n",
-    "    value=1.0, min=0.0, max=1.0, step=0.01, description=\"Samples (0.0 - 1.0):\",\n",
-    "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
+    "    value=1.0,\n",
+    "    min=0.0, \n",
+    "    max=1.0, \n",
+    "    step=0.01, \n",
+    "    description=\"Samples - [0, 1]:\",\n",
+    "    style={'description_width': '150px'}, \n",
+    "    layout=widgets.Layout(width='100px'))\n",
     "\n",
     "\n",
     "# Number of estimators (for QNN Bagging)\n",
-    "nestimators_widget = widgets.IntSlider(\n",
+    "nestimators_widget = widgets.IntText(\n",
     "    min=1, max=50, step=1, value=10, description=\"Estimators:\",\n",
     "    style={'description_width': '150px'}, layout=widgets.Layout(width='500px'))\n",
     "\n",
@@ -140,31 +286,55 @@
     "def display_widgets():\n",
     "    widget_box = widgets.VBox([\n",
     "        widgets.HTML(\"<h3>Quantum Classifier Configuration</h3>\"),\n",
-    "        epochs_widget,\n",
-    "        layers_widget,\n",
-    "        nqubits_widget,\n",
-    "        randomstate_widget,\n",
-    "        classifiers_widget,\n",
-    "        ansatzs_widget,\n",
-    "        embeddings_widget,\n",
-    "        widgets.HBox([verbose_widget, nsamples_widget]),\n",
-    "        nestimators_widget\n",
+    "        widgets.VBox([widgets.Label(\"General model options:\"), epochs_widget, layers_widget, nqubits_widget]),\n",
+    "        widgets.VBox([widgets.Label(\"Classifiers:\"), qsvm_checkbox, qnn_checkbox, qnn_bag_checkbox]),\n",
+    "        widgets.VBox([widgets.Label(\"Ansatzs:\"), hp_checkbox, tt_checkbox, two_checkbox, hwe_checkbox]),\n",
+    "        widgets.VBox([widgets.Label(\"Embeddings:\"), rx_checkbox, ry_checkbox, rz_checkbox, zz_checkbox, amp_checkbox]),\n",
+    "        widgets.VBox([widgets.Label(\"Bagging options:\"), nestimators_widget, nsamples_widget]),\n",
+    "        widgets.VBox([widgets.Label(\"Other options:\"), runs_widget, randomstate_widget, verbose_widget])\n",
     "    ], layout=widgets.Layout(border='solid 1px #cccccc', padding='20px', border_radius='10px'))\n",
     "    \n",
     "    display(widget_box)\n",
     "\n",
+    "\n",
+    "# Get options functions\n",
+    "classifier_widgets = [qnn_checkbox, qnn_bag_checkbox, qsvm_checkbox]\n",
+    "ansatz_widgets = [hp_checkbox, tt_checkbox, two_checkbox, hwe_checkbox]\n",
+    "emb_widgets = [rx_checkbox, rz_checkbox, ry_checkbox, zz_checkbox, amp_checkbox]\n",
+    "\n",
+    "classifier_enums = Model.list()\n",
+    "classifier_enums.remove(Model.ALL)\n",
+    "\n",
+    "ansatz_enums = Ansatzs.list()\n",
+    "ansatz_enums.remove(Ansatzs.ALL)\n",
+    "\n",
+    "emb_enums = Embedding.list()\n",
+    "emb_enums.remove(Embedding.ALL)\n",
+    "\n",
+    "get_vals = lambda x: x.value\n",
+    "\n",
+    "def get_classifiers():\n",
+    "    return itertools.compress(classifier_enums, map(get_vals, classifier_widgets))\n",
+    "\n",
+    "def get_ansatzs():\n",
+    "    return itertools.compress(ansatz_enums, map(get_vals, ansatz_widgets))\n",
+    "\n",
+    "def get_emb():\n",
+    "    return itertools.compress(emb_enums, map(get_vals, emb_widgets))\n",
+    "\n",
+    "# Display\n",
     "display_widgets()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "351cfc745ead42b99ee15d62da55ef01",
+       "model_id": "c557b104d4fd46ce964dc279b7a79c87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,13 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eac712dfb4034482a0edee32d14473ea",
+       "model_id": "22f4aa80068e4e15add99afa51666e0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,17 +388,22 @@
      "output_type": "stream",
      "text": [
       "Initializing QuantumClassifier with:\n",
-      "Verbose: True\n",
+      "Verbose: False\n",
       "Random State: 1234\n",
-      "Number of Qubits: 20\n",
-      "Number of Layers: 100\n",
-      "Classifiers: ['qsvm', 'qnn', 'qnnbag']\n",
-      "Embeddings: ['amplitude_embedding', 'ZZ_embedding', 'rx_embedding', 'rz_embedding', 'ry_embedding']\n",
-      "Ansatzs: ['HPzRx', 'tree_tensor', 'two_local', 'hardware_efficient']\n",
-      "Epochs: 1000\n",
-      "Samples: 0.8\n",
+      "Number of Qubits: 4\n",
+      "Number of Layers: 7\n",
+      "Classifiers: {<Model.QSVM: 4>}\n",
+      "Embeddings: {<Embedding.RY: 4>, <Embedding.RX: 2>, <Embedding.RZ: 3>}\n",
+      "Ansatzs: {<Ansatzs.HCZRX: 2>}\n",
+      "Epochs: 10\n",
+      "Samples: 1.0\n",
       "Estimators: 10\n",
-      "No data provided. Please upload a dataset.\n"
+      "3\n",
+      "|    | Model      | Embedding    | Ansatz   | Features   |   Accuracy |   Balanced Accuracy |   F1 Score |   Time taken |\n",
+      "|---:|:-----------|:-------------|:---------|:-----------|-----------:|--------------------:|-----------:|-------------:|\n",
+      "|  0 | Model.QSVM | Embedding.RY |          | ~          |   0.973333 |            0.973333 |   0.973291 |      10.9471 |\n",
+      "|  1 | Model.QSVM | Embedding.RX |          | ~          |   0.973333 |            0.973333 |   0.973291 |      10.9695 |\n",
+      "|  2 | Model.QSVM | Embedding.RZ |          | ~          |   0.973333 |            0.973333 |   0.973291 |      14.7672 |\n"
      ]
     }
    ],
@@ -239,13 +414,15 @@
     "# Function to train the model and display outputs\n",
     "def train_model(data=None):\n",
     "    try:\n",
-    "        print(f\"Initializing QuantumClassifier with:\\nVerbose: {verbose_widget.value}\\nRandom State: {randomstate_widget.value}\\nNumber of Qubits: {nqubits_widget.value}\\nNumber of Layers: {layers_widget.value}\\nClassifiers: {list(classifiers_widget.value)}\\nEmbeddings: {list(embeddings_widget.value)}\\nAnsatzs: {list(ansatzs_widget.value)}\\nEpochs: {epochs_widget.value}\\nSamples: {nsamples_widget.value}\\nEstimators: {nestimators_widget.value}\")\n",
-    "        # Split the dataset into train and test\n",
-    "        X = data.drop(columns=['target'])  # Assuming the target column is named 'target'\n",
-    "        y = data['target']\n",
-    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=randomstate_widget.value)\n",
+    "        classifiers = set(get_classifiers())\n",
+    "        ansatzs = set(get_ansatzs())\n",
+    "        emb = set(get_emb())\n",
     "\n",
-    "        \n",
+    "        print(f\"Initializing QuantumClassifier with:\\nVerbose: {verbose_widget.value}\\nRandom State: {randomstate_widget.value}\\nNumber of Qubits: {nqubits_widget.value}\\nNumber of Layers: {layers_widget.value}\\nClassifiers: {classifiers}\\nEmbeddings: {emb}\\nAnsatzs: {ansatzs}\\nEpochs: {epochs_widget.value}\\nSamples: {nsamples_widget.value}\\nEstimators: {nestimators_widget.value}\")\n",
+    "        # Split the dataset into train and test\n",
+    "        X = data.data  # Assuming the target column is named 'target'\n",
+    "        y = data.target\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=randomstate_widget.value)\n",
     "\n",
     "        # Initialize QuantumClassifier with selected parameters\n",
     "        clf = QuantumClassifier(\n",
@@ -253,21 +430,20 @@
     "            randomSate=randomstate_widget.value,\n",
     "            nqubits=nqubits_widget.value,\n",
     "            numLayers=layers_widget.value,\n",
-    "            classifiers=list(classifiers_widget.value),\n",
-    "            ansatzs=list(ansatzs_widget.value),\n",
-    "            embeddings=list(embeddings_widget.value),\n",
+    "            classifiers=classifiers,\n",
+    "            ansatzs=ansatzs,\n",
+    "            embeddings=emb,\n",
     "            epochs=epochs_widget.value,\n",
     "            maxSamples=nsamples_widget.value,\n",
     "            numPredictors=nestimators_widget.value\n",
     "        )\n",
     "\n",
     "        # Call the fit method and print the models and results\n",
-    "        models, predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
-    "        display(models)  # Display the resulting models\n",
-    "    except:\n",
+    "        clf.fit(X_train=X_train,y_train=y_train,X_test=X_test,y_test=y_test)\n",
+    "        # display(models)  # Display the resulting models\n",
+    "    except Exception as e:\n",
+    "        # print(e)\n",
     "        print(\"No data provided. Please upload a dataset.\")\n",
-    "\n",
-    "\n",
     "\n",
     "# Train button to trigger the training process\n",
     "train_button = widgets.Button(description=\"Train Model\", button_style='success')\n",
@@ -284,7 +460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lazyqml",
+   "display_name": "lazyqml-test",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
