Added runs in GUI

--- a/tests/LazyQML.ipynb
+++ b/tests/LazyQML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +73,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf437577cc3c423f82a59f4046c3d53f",
+       "model_id": "d235c16adcbb48e4a8083c7b6c943bf4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,13 +328,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c557b104d4fd46ce964dc279b7a79c87",
+       "model_id": "e727cfafe564455ea41ccb890b79af13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -366,44 +366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22f4aa80068e4e15add99afa51666e0e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='Train Model', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing QuantumClassifier with:\n",
-      "Verbose: False\n",
-      "Random State: 1234\n",
-      "Number of Qubits: 4\n",
-      "Number of Layers: 7\n",
-      "Classifiers: {<Model.QSVM: 4>}\n",
-      "Embeddings: {<Embedding.RY: 4>, <Embedding.RX: 2>, <Embedding.RZ: 3>}\n",
-      "Ansatzs: {<Ansatzs.HCZRX: 2>}\n",
-      "Epochs: 10\n",
-      "Samples: 1.0\n",
-      "Estimators: 10\n",
-      "3\n",
-      "|    | Model      | Embedding    | Ansatz   | Features   |   Accuracy |   Balanced Accuracy |   F1 Score |   Time taken |\n",
-      "|---:|:-----------|:-------------|:---------|:-----------|-----------:|--------------------:|-----------:|-------------:|\n",
-      "|  0 | Model.QSVM | Embedding.RY |          | ~          |   0.973333 |            0.973333 |   0.973291 |      10.9471 |\n",
-      "|  1 | Model.QSVM | Embedding.RX |          | ~          |   0.973333 |            0.973333 |   0.973291 |      10.9695 |\n",
-      "|  2 | Model.QSVM | Embedding.RZ |          | ~          |   0.973333 |            0.973333 |   0.973291 |      14.7672 |\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3568351874.py, line 30)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 30\u001b[0;36m\u001b[0m\n\u001b[0;31m    )\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -435,7 +406,8 @@
     "            embeddings=emb,\n",
     "            epochs=epochs_widget.value,\n",
     "            maxSamples=nsamples_widget.value,\n",
-    "            numPredictors=nestimators_widget.value\n",
+    "            numPredictors=nestimators_widget.value,\n",
+    "            runs=runs_widget.value\n",
     "        )\n",
     "\n",
     "        # Call the fit method and print the models and results\n",
